Updating for new demos

--- a/UtilityCalculator.Web/Views/Shared/_Layout.cshtml
+++ b/UtilityCalculator.Web/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - Azure Utility Calculator</p>
+            <p>&copy; @DateTime.Today.Year - Azure Utility Calculator</p>
         </footer>
     </div>
 
